@@ -1,0 +1,7 @@
+<?php
+
+$yii=dirname(__FILE__).'/../../framework/yii.php';
+$config=dirname(__FILE__).'/protected/config/main.php';
+
+require_once($yii);
+Yii::createWebApplication($config)->run();
