@@ -1,0 +1,5 @@
+<h2>You Win!</h2>
+
+<p>The word was: <?php echo $this->word; ?>.</p>
+
+<p><?php echo CHtml::link('Start Again',array('play')); ?></p>
